# django-is-awsome

./: .gitignore  .python-version  README.md  pyproject.toml
account/: admin.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_transaction_options_alter_transaction_amount_and_more.py
account/templates/: transaction_list.html
accounts/: constants.py  forms.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_account_balance_account_updated_at.py  0002_initial.py
analysis/: analyzers.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py  views_html.py
analysis/migrations/: 0001_initial.py  0002_analysis_difference_analysis_total_income_and_more.py
core/: settings.py  urls.py  views.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
moneybook/: db.sqlite3
moneybook/accounts/: admin.py  models.py  urls.py
moneybook/config/: settings.py  urls.py
moneybook/core/: settings.py  urls.py
moneybook/moneybook/: admin.py  apps.py  models.py  views.py
moneybook/templates/: base.html
moneybook/transactions/: models.py  urls.py  views_html.py
moneybook/users/: admin.py  forms.py  models.py  views.py
static/js/: bootstrap.bundle.js  bootstrap.esm.js  bootstrap.js
templates/: base.html  form-js.html  main.html
templates/accounts/: account_form.html  account_list.html
templates/analysis/: analysis_create.html  analysis_list.html
templates/transactions/: transaction_detail.html  transaction_list.html
transactions/: filters.py  forms.py  models.py  serializers.py  urls.py  views.py  views_html.py
transactions/migrations/: 0001_initial.py  0002_alter_transaction_options_alter_transaction_amount_and_more.py  0002_initial.py  0003_alter_transaction_options.py  0003_alter_transaction_type.py  (+1 more)
users/: apps.py  models.py  urls.py
(+8 files in other folders)
