[project]
name = "moneybook"
version = "0.1.0"
description = ""
authors = [
    {name = "kihoon",email = "nike6736@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "asgiref (==3.11.0)",
    "contourpy (==1.3.3)",
    "cycler (==0.12.1)",
    "django (==5.2.8)",
    "django-extension (==0.1.0)",
    "django-extensions (==4.1)",
    "django-filter (==25.2)",
    "djangorestframework (==3.16.1)",
    "dnspython (==2.8.0)",
    "drf-yasg (==1.21.11)",
    "fonttools (==4.60.1)",
    "gunicorn (==23.0.0)",
    "inflection (==0.5.1)",
    "kiwisolver (==1.4.9)",
    "matplotlib (==3.10.7)",
    "numpy (==2.3.5)",
    "packaging (==25.0)",
    "pandas (==2.3.3)",
    "pillow (==12.0.0)",
    "pymongo (==4.15.4)",
    "pyparsing (==3.2.5)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.3)",
    "ruff (==0.14.6)",
    "shelve-cache (==0.0.4)",
    "six (==1.17.0)",
    "sqlparse (==0.5.3)",
    "tzdata (==2025.2)",
    "uritemplate (==4.2.0)",
    "celery (>=5.5.3,<6.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
